// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with few possibleItems 1`] = `
<div>
  <h2>
    Possible Passwords
  </h2>
  1,000,000
  (
  19.93
   bits of entropy)
</div>
`;

exports[`renders with many possibleItems 1`] = `
<div>
  <h2>
    Possible Passwords
  </h2>
  ~ 
  221,073,919,720,733,000,000,000
  (
  ~ 
  77.55
   bits of entropy)
</div>
`;

exports[`renders without valid possibleItems 1`] = `
<div>
  <h2>
    Possible Passwords
  </h2>
  1
  (
  0.00
   bits of entropy)
</div>
`;
